--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,6 +28,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest  # Install pytest
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)/src" >> $GITHUB_ENV
+
       # Run Pytest
       - name: Run tests with pytest
         run: |
