--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ruff mypy
-          pip install -r requirements.txt  # Ensure your dependencies are installed
+          pip install -r conan ruff mypy  # Ensure your dependencies are installed
 
       - name: Run Ruff (Linter & Formatter)
         run: |
