--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -25,8 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff mypy
-          pip install -r conan ruff mypy  # Ensure your dependencies are installed
+          pip install conan ruff mypy
 
       - name: Run Ruff (Linter & Formatter)
         run: |
