--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -22,10 +22,16 @@ jobs:
         with:
           python-version: '3.9'
 
+      - name: Install & Configure Conan
+        run: |
+          pip install conan
+          conan profile detect
+          conan install . --build=missing
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install conan ruff mypy
+          pip install ruff mypy
 
       - name: Run Ruff (Linter & Formatter)
         run: |
