--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -14,13 +14,17 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential cmake
+        run: |
+          pip install --upgrade pip
+          pip install --upgrade pipx
+          pipx install cmake ninja conan poetry clang-tidy clang-format
 
-      - name: Build project
-        run: make
+      - name: Profile detect
+        run: |
+          conan profile detectd
 
       - name: Run C++ Unit Tests
-        run: make test
+        run: make test_cpp
