--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,25 +13,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Set up Python environment (you can specify your version)
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Python Set Up
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.x'  # Use a version that is suitable for your project
-
-      # Install dependencies
+          python-version: '3.12'
+      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest  # Install pytest
+          pip install --upgrade pip
+          pip install --upgrade pipx
+          pipx install cmake ninja conan poetry clang-tidy clang-format
 
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$(pwd)/src" >> $GITHUB_ENV
-
-      # Run Pytest
-      - name: Run tests with pytest
+      - name: Profile detect 
         run: |
-          pytest --maxfail=1 --disable-warnings -q
+          conan profile detect
+
+      - name: Run tests
+        run: |
+          make test_py
