--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -10,33 +10,23 @@ on:
 
 jobs:
   lint:
-    name: Run Ruff and Mypy
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - name: Python Set Up
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: '3.12'
 
-      - name: Install & Configure Conan
+      - name: Install tools
         run: |
-          pip install conan
-          conan profile detect
-          conan install . --build=missing
-
-      - name: Install dependencies
+          pip install --upgrade pip
+          pip install --upgrade pipx
+          pipx install poetry mypy ruff
+      
+      - name: Run
         run: |
-          python -m pip install --upgrade pip
-          pip install ruff mypy
-
-      - name: Run Ruff (Linter & Formatter)
-        run: |
-          ruff format .  # Formatter (ensures formatting is correct)
-
-      - name: Run Mypy (Type Checking)
-        run: |
-          mypy .
+          make lint_py
