--- a/.github/workflows/cpp-lint.yml
+++ b/.github/workflows/cpp-lint.yml
@@ -30,5 +30,5 @@ jobs:
 
       - name: Run linter and formatter checks
         run: |
-          make lint_format_check_cpp
+          make lint_cpp
 
