it might be over

--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Profile detect
         run: |
-          conan profile detectd
+          conan profile detect
 
       - name: Run C++ Unit Tests
         run: make test_cpp
