--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install --upgrade pipx
-          pipx install poetry mypy ruff
+          pipx install poetry conan mypy ruff
       
       - name: Run
         run: |
