it might be over 4

--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -26,6 +26,10 @@ jobs:
           pip install --upgrade pip
           pip install --upgrade pipx
           pipx install poetry conan mypy ruff
+
+      - name: Profile detect 
+        run: |
+          conan profile detect
       
       - name: Run
         run: |
