it might be over 6

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -26,6 +26,7 @@ jobs:
           pip install --upgrade pip
           pip install --upgrade pipx
           pipx install cmake ninja conan poetry clang-tidy clang-format
+          poetry add requests
 
       - name: Profile detect 
         run: |
