--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -26,6 +26,7 @@ jobs:
           pip install --upgrade pip
           pip install --upgrade pipx
           pipx install poetry conan ninja mypy ruff
+          poetry add requests
 
       - name: Profile detect 
         run: |
