--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pytest = "^8.3.3"
 mypy = "^1.12.1"
 ruff = "^0.7.0"
 requests = "^2.32.3"
+types-requests = "^2.32.0.20241016"
 
 
 [build-system]
