preemptive cmake changes (hopefully wont error)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(pybind11 REQUIRED)
 find_package(GTest REQUIRED)
 enable_testing()
 
+find_package(cpr REQUIRED)
+find_package(nlohmann_json REQUIRED)
+
 file(GLOB INTERN_PROJECT_MAIN src/cppsrc/main.cpp)
 file(GLOB_RECURSE INTERN_PROJECT_HEADERS src/cppsrc/*.hpp)
 file(GLOB_RECURSE INTERN_PROJECT_TESTS src/cppsrc/test/*.cpp)
@@ -23,11 +26,18 @@ target_include_directories(intern_tests PUBLIC src)
 target_link_libraries(intern_project PRIVATE Python3::Python)
 target_link_libraries(intern_project PRIVATE pybind11::pybind11)
 target_link_libraries(intern_project PRIVATE ${Python3_LIBRARIES})
+target_link_libraries(intern_project PRIVATE cpr::cpr)
+target_link_libraries(intern_project PRIVATE nlohmann_json::nlohmann_json)
 
 target_link_libraries(intern_tests PRIVATE Python3::Python)
 target_link_libraries(intern_tests PRIVATE pybind11::pybind11)
 target_link_libraries(intern_tests PRIVATE ${Python3_LIBRARIES})
 target_link_libraries(intern_tests PRIVATE gtest::gtest)
+target_link_libraries(intern_tests PRIVATE cpr::cpr)
+target_link_libraries(intern_tests PRIVATE nlohmann_json::nlohmann_json)
 
 pybind11_add_module(intern src/cppsrc/main.cpp)
+target_link_libraries(intern PRIVATE cpr::cpr)
+target_link_libraries(intern PRIVATE nlohmann_json::nlohmann_json)
+
 install(TARGETS intern DESTINATION intern_project)
