data_client unit tests + integration test

--- a/.github/workflows/cpp-lint.yml
+++ b/.github/workflows/cpp-lint.yml
@@ -29,16 +29,7 @@ jobs:
 
       - name: Check Conan Profile
         run: |
-          conan profile detect || echo "Conan profile detection failed!"
-  
-      - name: Build Project
-        run: make build
-
-      - name: Debug Check
-        run: |
-          pwd
-          ls -la
-          ls -R src/cppsrc || echo "src/cppsrc not found!"
+          conan profile detect
 
       - name: Run linter and formatter checks
         run: |
