--- a/mypy.ini
+++ b/mypy.ini
@@ -12,3 +12,7 @@ ignore_missing_imports = True
 
 [mypy-pysrc]
 ignore_missing_imports = True
+
+[mypy-pysrc.data_client]
+ignore_missing_imports = True
+
