--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ mypy = "^1.12.1"
 ruff = "^0.7.0"
 requests = "^2.32.3"
 types-requests = "^2.32.0.20241016"
+scikit-learn = {extras = ["optional"], version = "^1.6.1"}
 
 
 [build-system]
