--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ruff = "^0.7.0"
 requests = "^2.32.3"
 types-requests = "^2.32.0.20241016"
 scikit-learn = {extras = ["optional"], version = "^1.6.1"}
+numpy = "^2.2.3"
 
 
 [build-system]
