--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ requests = "^2.32.3"
 types-requests = "^2.32.0.20241016"
 scikit-learn = {extras = ["optional"], version = "^1.6.1"}
 numpy = "^2.2.3"
+nlohmann-json = "^3.11.3"
 
 
 [build-system]
